multiserver/src/main/resources/envoy.yml
admin: # configures the admin server which can be used to view configurations, change log levels, view stats, etc…
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901
static_resources:
  clusters:
    - name: grpc_service
      load_assignment:
        cluster_name: grpc_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: "192.168.219.100", port_value: 50051 } #윈도우 자체 ip!!!!(not localhost!!!), ipconfig
      lb_policy: ROUND_ROBIN
      connect_timeout: 30s
      type: STATIC
      http2_protocol_options:
        stream_error_on_invalid_http_messaging: true

  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 80 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
                stat_prefix: ingress_http
                codec_type: AUTO
                http2_protocol_options: {}
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: grpc_service
                http_filters:
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb"
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors"
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
